# shop-manager

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: dashboard_tasks_roadmap.md
migrations/: env.py
migrations/versions/: a7c9e2f4d6b1_add_tasks.py  b1e19fa7185f_initial_schema.py  c6d4a2b8f9e1_add_task_colors_and_monthly_rule.py  c9a4d2f1b8e3_add_application_settings.py  d2f8a91c4b7e_add_task_series.py  e3b7c2a9d4f1_add_order_bound_tasks.py  f4a2c7d9e1b6_add_product_categories.py
src/app/: main.py
src/app/application/dto/: customers.py  dashboard.py  orders.py  product_categories.py  products.py  settings.py  suppliers.py  tasks.py
src/app/config/: settings.py
src/app/domain/: enums.py
src/app/ui/: date_edit.py  dialog_helpers.py  localization.py  page_chrome.py  styles.py  task_colors.py  window_sizing.py
tests/integration/: conftest.py  test_create_product_service.py  test_customer_services.py  test_db_smoke.py  test_list_products_service.py  test_order_services.py  test_product_categories_service.py  test_product_category_assignments.py  test_product_status_service.py  test_product_variant_services.py  test_settings_services.py  test_supplier_services.py  test_task_services.py  test_update_product_service.py
tests/unit/: test_create_product_service.py  test_dashboard_task_labels.py  test_localization.py  test_main_window.py  test_order_pickers.py  test_product_dialog.py  test_products_service.py  test_session.py  test_startup_tasks.py  test_task_recurrence.py
(+40 files in other folders)
