[project]
name = "shop-manager-desktop"
version = "0.1.0"
description = "Windows desktop application for store order and stock management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.7",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "python-dotenv>=1.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"